--- a/resources/css/jobs-new.css
+++ b/resources/css/jobs-new.css
@@ -16,7 +16,7 @@
     padding-right: 1rem;
 }
 .a-new-job-input {
-    background-color: hsla(0, 47%, 95%, 25);
+    background-color: var(--color-input);
     border: none;
     border-radius: 9rem;
     padding-left: 1rem;
@@ -29,7 +29,7 @@
     text-align: center;
 }
 .a-new-job-input-textArea {
-    background-color: hsla(0, 47%, 95%, 25);
+    background-color: var(--color-input);
     border: none;
     border-radius: 1rem;
     padding-left: 1rem;
