--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,6 +10899,43 @@ a.a-link:hover {
     padding-left: 0.5rem;
 }
 
+.o-pending {
+    color: var(--color-accent);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.m-pending {
+    border: 3px solid var(--color-border);
+    border-radius: 16px;
+    padding: 4rem;
+}
+.m-pending-home-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.a-pending-home-button {
+    text-align: center;
+    border: 3px solid var(--color-white);
+    background-color: var(--color-accent);
+    color: var(--color-white);
+    border-radius: 24px;
+    font-size: 14pt;
+    font-weight: bold;
+    width: 150px;
+    padding: 0.5rem;
+}
+a.a-pending-home-button:hover {
+    border: 3px solid var(--color-accent);
+    background-color: var(--color-white);
+    color: var(--color-accent);
+    text-decoration: none;
+}
+
 body {
     margin: 0;
     padding: 0;
