--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,6 +17,7 @@ body {
 @import "header.css";
 @import "footer.css";
 @import "login.css";
+@import "pending.css";
 
 body {
     background-color: #fff;
