started on avd-home-page design

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,6 +19,7 @@ body {
 @import "login.css";
 @import "pending.css";
 @import "register.css";
+@import "avd-home.css";
 
 body {
     background-color: #fff;
