--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10248,7 +10248,7 @@ a.a-sub-course-title:hover {
     padding: 1rem;
     /* width: 24rem; */
     border-radius: 0.5rem;
-    width: 80%;
+    width: 70%;
 }
 .a-cmo-modal-image {
     border-radius: 0.5rem;
@@ -10978,6 +10978,61 @@ a.a-pending-home-button:hover {
     border: 3px solid var(--color-accent);
     background-color: var(--color-white);
     color: var(--color-accent);
+}
+
+.o-avd-home {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.o-avd-home-card {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+.m-image-container {
+    height: 20vh;
+    width: 100%;
+    border: 3px solid var(--color-accent);
+    border-radius: 9px;
+    position: relative;
+}
+.a-avd-home-play {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 65px;
+}
+.a-avd-home-thumbnail {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 3px;
+}
+.a-avd-home-title {
+    color: var(--color-accent);
+    font-size: 16pt;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+.a-avd-home-content {
+    font-size: 11pt;
+    font-weight: 100;
+    color: var(--color-portfolio-home-text);
+}
+
+.a-avd-modal-video {
+    width: 100%;
+    height: auto;
+    border-radius: 9px;
+}
+.m-avd-porfolioBtn {
+    display: flex;
+    justify-content: flex-end;
+}
+.o-avd-modal-portfolio {
+    margin-top: 2rem;
 }
 
 body {
