--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,7 @@ body {
 @import "jobs.css";
 @import "jobs-new.css";
 @import "header.css";
+@import "header_home.css";
 @import "footer.css";
 @import "login.css";
 @import "pending.css";
