--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -1,128 +1,111 @@
-/* Header */
-body {
-    position: relative;
+.o-header-alt {
+    width: 80%;
+    max-width: 840px;
+    margin: 0 auto;
+    margin-top: 2rem;
+    /* border-bottom: 2px solid var(--color-accent); */
 }
-.o-login {
-    position: relative;
-    top: 20px;
-    left: 20px;
-    display: flex;
-    flex-direction: column;
-    width: 50px;
-    text-align: center;
-    color: var(--color-accent);
-    font-weight: bold;
-    padding-bottom: 0.5rem;
+.a-border-header-bottom {
+    width: 85%;
+    max-width: 860px;
+    height: 2px;
+    margin: 0 auto;
+    background-color: var(--color-accent);
+    border-radius: 25px;
 }
-.a-dashboard-logo {
-    font-size: 23pt;
-}
-a.o-login:hover {
-    text-decoration: none;
-    color: var(--color-accent);
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid var(--color-accent);
-}
-a.o-login:link {
-    text-decoration: none;
-    color: var(--color-accent);
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid var(white);
-}
-.a-login-logo {
-    height: auto;
-    width: 50px;
+.a-site-logo-alt {
+    height: 73px;
     width: auto;
 }
-.o-header {
+.m-header-alt {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+    align-items: center;
+    justify-content: flex-start;
+    padding-bottom: 2rem;
 
-.m-headerTop {
+}
+.a-course-title-alt {
+    font-size: 16pt;
+    color: var(--color-accent);
+    font-weight: bold;
+    margin-left: 1rem;
+}
+.m-filtert-links {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 2rem;
+}
+.m-filtert-links a:not(:first-child) {
+    margin-left: 0.5rem;
+}
+.a-sub-course-link,
+a.a-sub-course-link:link {
+    width: 140px;
+    text-align: center;
+    padding: 0.5rem 0rem;
+    border-radius: 26px;
+    font-weight: bold;
+    border: 2px solid var(--color-accent);
+    background-color: white;
+    color: var(--color-accent);
+    text-decoration: none;
+}
+a.a-sub-course-link:hover {
+    border: 2px solid white;
+    background-color: var(--color-accent);
+    color: white;
+    text-decoration: none;
+}
+.a-yearbook-filter {
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10vh;
-}
-
-.m-headerBottom {
-    display: flex;
-    justify-content: center;
-    font-size: 20pt;
     font-weight: bold;
-    color: var(--color-accent);
-    margin-top: 35px;
-
+    font-size: 10pt;
 }
-.m-site-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* link normal  */
+a.a-yearbook-link-cmo,
+a.a-yearbook-link-cmo:link {
+    border: 4px solid var(--color-cmo);
+    color: var(--color-cmo);
 }
-
-.a-site-logo {
-    height: 125px;
-    width: auto;
-    padding: 0px 40px;
+a.a-yearbook-link-avd,
+a.a-yearbook-link-avd:link {
+    border: 4px solid var(--color-avd);
+    color: var(--color-avd);
 }
-
-.a-subHeader {
-    line-height: 0.75;
-    padding: 0 16px;
-    text-align: center;
+a.a-yearbook-link-nmd,
+a.a-yearbook-link-:link {
+    border: 4px solid var(--color-nmd);
+    color: var(--color-nmd);
 }
-
-/* Sub header LINE styling */
-
-.a-line {
-    background-color: var(--color-accent);
-    height: 4px;
-    width: 27vw;
-    align-self: flex-end;
+a.a-yearbook-link-gmb,
+a.a-yearbook-link-gmb:link {
+    border: 4px solid var(--color-gmb);
+    color: var(--color-gmb);
 }
-
-.a-lineLeft {
-    border-radius: 9px 0px 0px 9px;
-
-}
-
-.a-lineRight {
-    border-radius: 0px 9px 9px 0px;
-
-}
-
-
-/* link styling  */
-
-
-.a-link {
-    padding: 3px 30px;
-    /* width: 150px; */
-    border-radius: 18px;
-    text-align: center;
-    /* margin: 1rem; */
-    margin-top: 1rem;
-    align-self: flex-end;
-    background-color: var(--color-accent);
-    font-weight: bold;
-}
-
-a.a-link:link,
-a.a-link:visited {
-    color: var(--color-white);
+/* link hover */
+a.a-yearbook-link-cmo:hover {
+    background-color: var(--color-cmo);
+    color: white;
     text-decoration: none;
-    border: 4px solid var(--color-accent);
-
 }
-
-a.a-link:hover {
-    border: 4px solid var(--color-accent);
-    color: var(--color-accent);
-    background-color: var(--color-white);
-
+a.a-yearbook-link-avd:hover {
+    background-color: var(--color-avd);
+    color: white;
+    text-decoration: none;
 }
-
-
-
+a.a-yearbook-link-nmd:hover {
+    background-color: var(--color-nmd);
+    color: white;
+    text-decoration: none;
+}
+a.a-yearbook-link-gmb:hover {
+    background-color: var(--color-gmb);
+    color: white;
+    text-decoration: none;
+}
