minor design changes (linked sitelogo to homepage, linked yearbook students to respective profile, made profile detail more responisve, changed max-width of avh homepage)

--- a/resources/css/avd-home.css
+++ b/resources/css/avd-home.css
@@ -1,6 +1,7 @@
 .o-avd-home {
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 80%;
+    max-width: 840px;
+    margin: 0 auto;
 }
 .o-avd-home-card {
     margin-top: 2rem;
