--- a/resources/css/yearbook.css
+++ b/resources/css/yearbook.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
+    margin-top: 1.5rem;
     width: 70vw;
 }
 .o-yearbook-students::after {
