--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10420,12 +10420,20 @@ a.o-nmd-card:hover {
     width: 220px;
     height: 220px;
 }
+@media only screen and (max-width: 750px) {
+    .m-cmo-detail-container {
+        width: 170px;
+        height: 170px;
+    }
+  }
 .a-cmo-detail-profile {
     width: 100%;
+    height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
     border-radius: 50%;
 }
+
 .a-cmo-detail-profile-tag {
     position: absolute;
     display: flex;
@@ -10471,6 +10479,7 @@ a.o-nmd-card:hover {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
+    margin-top: 1.5rem;
     width: 70vw;
 }
 .o-yearbook-students::after {
@@ -10546,6 +10555,7 @@ a.o-nmd-card:hover {
 .o-jobcontainer {
     padding-top: 2rem;
     width: 80%;
+    max-width: 840px;
     margin: 0 auto;
 }
 .m-job-new-link {
@@ -11117,8 +11127,9 @@ a.a-pending-home-button:hover {
 }
 
 .o-avd-home {
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 80%;
+    max-width: 840px;
+    margin: 0 auto;
 }
 .o-avd-home-card {
     margin-top: 2rem;
