--- a/resources/css/cmo-detail.css
+++ b/resources/css/cmo-detail.css
@@ -43,11 +43,19 @@
     width: 220px;
     height: 220px;
 }
+@media only screen and (max-width: 750px) {
+    .m-cmo-detail-container {
+        width: 170px;
+        height: 170px;
+    }
+  }
 .a-cmo-detail-profile {
     width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 50%;
 }
+
 .a-cmo-detail-profile-tag {
     position: absolute;
     display: flex;
