added forgot pass design for desktop + restrict upload by adding accept to input fields

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,6 +21,7 @@ body {
 @import "pending.css";
 @import "register.css";
 @import "avd-home.css";
+@import "verify.css";
 
 body {
     background-color: #fff;
