--- a/resources/css/nmd-home.css
+++ b/resources/css/nmd-home.css
@@ -3,6 +3,7 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
     width: 80%;
+    max-width: 840px;
     margin: 0 auto;
     margin-top: 2rem;
 
