--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -43,6 +43,7 @@
 }
 .a-sub-course-link,
 a.a-sub-course-link:link {
+    font-size: 11pt;
     width: 140px;
     text-align: center;
     padding: 0.5rem 0rem;
@@ -57,6 +58,24 @@ a.a-sub-course-link:hover {
     border: 2px solid white;
     background-color: var(--color-accent);
     color: white;
+    text-decoration: none;
+}
+a.a-sub-course-link__alt {
+    font-size: 11pt;
+    width: 140px;
+    text-align: center;
+    padding: 0.5rem 0rem;
+    border-radius: 26px;
+    font-weight: bold;
+    border: 2px solid white;
+    background-color: var(--color-accent);
+    color: white;
+    text-decoration: none;
+}
+a.a-sub-course-link__alt:hover {
+    border: 2px solid var(--color-accent);
+    background-color: white;
+    color: var(--color-accent);
     text-decoration: none;
 }
 .a-yearbook-filter {
