--- a/resources/css/header_home.css
+++ b/resources/css/header_home.css
@@ -13,6 +13,7 @@ body {
     color: var(--color-accent);
     font-weight: bold;
     padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 .a-dashboard-logo {
     font-size: 23pt;
