--- a/resources/css/jobs-new.css
+++ b/resources/css/jobs-new.css
@@ -5,23 +5,35 @@
     margin-top: 1rem;
     border: 3px solid var(--color-border);
     border-radius: 3rem;
+
 }
-.m-new-job-input {
+.m-job-new-container {
+    /* margin: 0 auto; */
+}
+/* .m-new-job-input {
+    display: flex;
+    justify-content: flex-end;
+} */
+.m-new-job-label {
     display: flex;
     justify-content: flex-end;
 }
+@media only screen and (max-width: 767px) {
+    .m-new-job-label {
+        justify-content: flex-start;
+    }
+}
 .a-new-job-label {
-    font-weight: 700;
+    font-weight: 501;
+    font-size: 11pt;
     color: var(--color-accent);
-    padding-right: 1rem;
 }
 .a-new-job-input {
     background-color: var(--color-input);
     border: none;
     border-radius: 9rem;
-    padding-left: 1rem;
     color: var(--color-accent);
-    width: 250px;
+    width: 100%;
     height: 40px;
     margin-bottom: 1rem;
 }
@@ -34,7 +46,7 @@
     border-radius: 1rem;
     padding-left: 1rem;
     color: var(--color-accent);
-    width: 250px;
+    width: 100%;
     height: 250px;
     margin-bottom: 1rem;
 }
