--- a/resources/css/register.css
+++ b/resources/css/register.css
@@ -15,6 +15,12 @@
     justify-content: flex-end;
     align-items: center;
 }
+@media only screen and (max-width: 767px) {
+    .a-register-label {
+        justify-content: flex-start;
+
+    }
+  }
 .o-form-group {
     margin-bottom: 0.5rem;
 }
