--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -110,23 +110,52 @@ a.a-yearbook-link-gmb:link {
     color: var(--color-gmb);
 }
 /* link hover */
+a.a-yearbook-link-cmo__alt,
 a.a-yearbook-link-cmo:hover {
     background-color: var(--color-cmo);
     color: white;
     text-decoration: none;
 }
+a.a-yearbook-link-avd__alt,
 a.a-yearbook-link-avd:hover {
     background-color: var(--color-avd);
     color: white;
     text-decoration: none;
 }
+a.a-yearbook-link-nmd__alt,
 a.a-yearbook-link-nmd:hover {
     background-color: var(--color-nmd);
     color: white;
     text-decoration: none;
 }
+a.a-yearbook-link-gmb__alt,
 a.a-yearbook-link-gmb:hover {
     background-color: var(--color-gmb);
     color: white;
+    text-decoration: none;
+}
+/* alt */
+a.a-yearbook-link-cmo__alt:hover {
+    border: 4px solid var(--color-cmo);
+    color: var(--color-cmo);
+    background-color: white;
+    text-decoration: none;
+}
+a.a-yearbook-link-avd__alt:hover {
+    border: 4px solid var(--color-avd);
+    color: var(--color-avd);
+    background-color: white;
+    text-decoration: none;
+}
+a.a-yearbook-link-nmd__alt:hover {
+    border: 4px solid var(--color-nmd);
+    color: var(--color-nmd);
+    background-color: white;
+    text-decoration: none;
+}
+a.a-yearbook-link-gmb__alt:hover {
+    background-color: white;
+    border: 4px solid var(--color-gmb);
+    color: var(--color-gmb);
     text-decoration: none;
 }
