--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -38,6 +38,8 @@
     height: 30%;
     width: 30%;
     border-radius: 50%;
+    font-size: 10pt;
+    font-weight: bold;
 }
 
 .a-home-card-tag {
@@ -88,8 +90,99 @@ a.o-home-card:visited {
 
 .o-home-card:hover h3{
     /* color: var(--color-main); */
-    border-bottom: 1px solid var(--color-accent);
+    border-bottom: 3px solid var(--color-accent);
 }
 .o-home-card img {
     transition: transform .4s;
 }
+
+/* video links */
+.o-home-video-links {
+    margin-bottom: 2rem;
+    margin-top: 6rem;
+}
+.m-home-video-link-container {
+    display: flex;
+    justify-content: center;
+}
+.m-home-video-link-container button:not(:last-child) {
+    margin-right: 2rem;
+
+}
+@media only screen and (max-width: 575px) {
+    .m-home-video-link-container button:not(:last-child) {
+        margin-right: 1rem;
+    }
+  }
+.a-home-video-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 9pt;
+    font-weight: bold;
+    height: 50px;
+    width: 50px;
+    background-color: white;
+    border-radius: 50%;
+}
+/* videos  */
+.o-home-video {
+    display: flex;
+    justify-content: center;
+}
+.a-home-video {
+    width: 80%;
+    max-width: 840px;
+    display: none;
+    border-radius: 15px;
+    border: 4px solid var(--color-accent);
+}
+.a-home-video-link__cmo {
+    border: 4px solid var(--color-cmo);
+    color: var(--color-cmo);
+}
+.a-home-video-link__cmo:hover,
+.a-home-video-link__cmo-active {
+    border: 4px solid var(--color-cmo);
+    color: white;
+    background-color: var(--color-cmo);
+}
+.a-home-video-link__avd {
+    border: 4px solid var(--color-avd);
+    color: var(--color-avd);
+}
+.a-home-video-link__avd:hover,
+.a-home-video-link__avd-active {
+    border: 4px solid var(--color-avd);
+    color: white;
+    background-color: var(--color-avd);
+}
+.a-home-video-link__nmd {
+    border: 4px solid var(--color-nmd);
+    color: var(--color-nmd);
+}
+.a-home-video-link__nmd:hover,
+.a-home-video-link__nmd-active {
+    border: 4px solid var(--color-nmd);
+    color: white;
+    background-color: var(--color-nmd);
+}
+.a-home-video-link__gmb {
+    border: 4px solid var(--color-gmb);
+    color: var(--color-gmb);
+}
+.a-home-video-link__gmb:hover,
+.a-home-video-link__gmb-active {
+    border: 4px solid var(--color-gmb);
+    color: white;
+    background-color: var(--color-gmb);
+}
+.a-home-video {
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+  }
+
+  /* Go from zero to full opacity */
+  @keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
