--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10232,15 +10232,6 @@ a.o-home-card:visited {
             animation: fadeEffect 1s; /* Fading effect takes 1 second */
   }
 
-  /* Go from zero to full opacity */
-  @-webkit-keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
-  @keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
 
 /* sub course filter */
 .o-sub-courses {
@@ -10367,6 +10358,14 @@ a.a-sub-course-title:hover {
        object-fit: cover;
 }
 
+.a-student-portofolio-header {
+    font-weight: bold;
+    color: var(--color-accent);
+}
+.a-student-portofolio-sub_header {
+    font-weight: 200;
+    color: var(--color-portfolio-home-text);
+}
 .show {
     opacity: 1;
     visibility: visible !important;
@@ -10376,6 +10375,8 @@ a.a-sub-course-title:hover {
 .a-cmo-portfolio-description {
     padding-bottom: 2rem;
     box-sizing: border-box;
+    font-weight: 200;
+    color: var(--color-portfolio-home-text);
 }
 
 .m-cmo-portfolioBtn {
@@ -10566,6 +10567,7 @@ a.o-nmd-card:hover {
     -o-object-fit: cover;
        object-fit: cover;
     border-radius: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .a-student-detail-page {
@@ -11053,8 +11055,9 @@ a.a-yearbook-link-gmb__alt:hover {
 body {
     position: relative;
 }
+
 .o-login {
-    position: relative;
+    position: absolute;
     top: 20px;
     left: 20px;
     display: flex;
@@ -11065,9 +11068,6 @@ body {
     font-weight: bold;
     padding-bottom: 0.5rem;
     margin-bottom: 1rem;
-}
-.a-dashboard-logo {
-    font-size: 23pt;
 }
 a.o-login:hover {
     text-decoration: none;
@@ -11080,6 +11080,34 @@ a.o-login:link {
     color: var(--color-accent);
     padding-bottom: 0.5rem;
     border-bottom: 1px solid var(white);
+}
+.o-profile {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 50px;
+    text-align: center;
+    color: var(--color-accent);
+    font-weight: bold;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
+}
+a.o-profile:hover {
+    text-decoration: none;
+    color: var(--color-accent);
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid var(--color-accent);
+}
+a.o-profile:link {
+    text-decoration: none;
+    color: var(--color-accent);
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid var(white);
+}
+.a-dashboard-logo {
+    font-size: 23pt;
 }
 .a-login-logo {
     height: auto;
@@ -11119,7 +11147,11 @@ a.o-login:link {
     width: auto;
     padding: 0px 40px;
 }
-
+@media only screen and (max-width: 575px) {
+    .a-site-logo {
+        height: 65px;
+    }
+  }
 .a-subHeader {
     line-height: 0.75;
     padding: 0 16px;
