--- a/resources/css/avd-home.css
+++ b/resources/css/avd-home.css
@@ -35,6 +35,7 @@
 }
 .a-avd-home-title {
     color: var(--color-accent);
+    font-family: vag-bold;
     font-size: 16pt;
     font-weight: bold;
     border-bottom: 1px solid white;
