--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -32,6 +32,7 @@
     width: 250px;
     height: 40px;
     margin-bottom: 1rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .a-login-button {
     border: 3px solid var(--color-white);
